[tool.poetry]
authors = [" "]
description = ""
name = "pymatrix-ss"
packages = [
  {include = "pymatrix", from = "src"},
]
readme = "README.md"
repository = "https://github.com/m9810223/pymatrix-ss"
version = "0.1.7"

[tool.poetry.dependencies]
python = ">3,<4"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
pymatrix = "pymatrix:screensaver"
