[tool.poetry]
authors = [" "]
description = ""
name = "pymatrix-ss"
packages = [{include = "pymatrix_ss", from = "src"}]
readme = "README.md"
repository = "https://github.com/m9810223/pymatrix-ss"
version = "0.1.8"

[tool.poetry.dependencies]
python = ">3,<4"

[tool.poetry.scripts]
pymatrix = "pymatrix:screensaver"
